# SMBC-Group-GREENxDATA-Challenge

./: .env.example  .gitignore  README.md  pyproject.toml
configs/: config.yaml
configs/cat/: 001.yaml  002.yaml  003.yaml  004.yaml  005.yaml  006.yaml  007.yaml  008.yaml  009.yaml  010.yaml  011.yaml  012.yaml  013.yaml  014.yaml  015.yaml  016.yaml  017.yaml  018.yaml  019.yaml  020.yaml  021.yaml  022.yaml  023.yaml  024.yaml  025.yaml  026.yaml  027.yaml  028.yaml  029.yaml  030.yaml  031.yaml  default.yaml
configs/cv/: stratified_kfold.yaml
configs/experiment/: 001-tabular-v01.yaml  001-tabular_v01.yaml  001-tabular_v1.yaml  002-tabular_v2.yaml  003-tabular_v2.yaml  004-tabular_v2.yaml  005-tabular_v2.yaml  006-tabular_v2.yaml  007-tabular_v2.yaml  008-tabular_v2.yaml  009-tabular_v2.yaml  010-tabular_v2.yaml  011-tabular_v2.yaml  012-tabular_v2.yaml  013-tabular_v2.yaml  014-tabular_v2.yaml  015-tabular_v2.yaml  016-tabular_v2.yaml  017-tabular_v2.yaml  018-tabular_v2.yaml  019-tabular_v2.yaml  020-tabular_v2.yaml  021-tabular_v2.yaml  022-tabular_v2.yaml  023-tabular_v2.yaml  024-tabular_v2.yaml  025-tabular_v2.yaml  026-tabular_v2.yaml  027-tabular_v2.yaml  028-tabular_v2.yaml  029-tabular_v2.yaml  030-tabular_v2.yaml  031-tabular_v2.yaml  032-tabular_v3.yaml  033-tabular_v3.yaml  034-tabular_v2.yaml  035-stacking_v1.yaml  036-classifier_v1.yaml  037-classifier_v1.yaml  038-classifier_v1.yaml  (+95 more)
configs/paths/: default.yaml
notebooks/: classification_v1.ipynb  classifier_v1.ipynb  eda.ipynb  ensemble_v1.ipynb  ensemble_v2.ipynb  ensemble_v3.ipynb  stacking_v1.ipynb  stacking_v2.ipynb  stacking_v3.ipynb  stacking_v4.ipynb  tabular_v01.ipynb  tabular_v1.ipynb  tabular_v2.ipynb  tabular_v3.ipynb  tabular_v4.ipynb  tabular_v5.ipynb  tabular_v6.ipynb  tabular_v7.ipynb  text_v1.ipynb
notebooks/eda/: eda.ipynb
notebooks/hparam_tuning/: gbdt.ipynb
src/experiment/: base.py  optimization.py  pipeline.py  runner.py  utils.py
src/experiment/customs/: embedding.py  feature.py
src/experiment/feature/: tabular.py
src/experiment/model/: custom_metrics.py  runner.py
tests/experiment/feature/: test_tabular.py
