[project]
name = "smbc-group-greenxdata-challenge"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "hydra-core>=1.3.2",
    "hydra-colorlog>=1.2.0",
    "ipykernel>=6.27.1",
    "notebook>=7.0.6",
    "scikit-learn>=1.3.2",
    "pandas>=2.0.3",
    "sweetviz>=2.3.1",
    "setuptools>=69.0.2",
    "torch>=2.1.1",
    "sentence-transformers>=2.2.2",
    "protobuf>=4.25.1",
    "category_encoders>=2.6.3",
    "rootutils>=1.0.7",
    "lightgbm>=4.1.0",
    "xgboost>=2.0.2",
    "seaborn>=0.13.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling<=1.18.0"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=23.11.0",
    "mypy>=1.7.1",
    "ruff>=0.1.6",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
target-version = "py310" 
unfixable = ["F401", "F841"]
ignore = ["E501", "E402"]
line-length = 120

[tool.black]
line-length = 120

[tool.mypy]
allow_redefinition = true
allow_untyped_globals = false
check_untyped_defs = true
color_output = true
disallow_incomplete_defs = true
disallow_untyped_calls = false
disallow_untyped_decorators = false
disallow_untyped_defs = true
error_summary = true
ignore_missing_imports = true
implicit_reexport = true
namespace_packages = true
no_implicit_optional = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
show_traceback = true
strict = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = false
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = false
disallow_any_generics = false
